@@ -1,3 +1,5 @@
+from unittest.mock import Mock
+
 from demo.admin import Admin1
 from demo.models import DemoModel1
 from django.contrib.admin import site
@@ -6,7 +8,9 @@ from admin_extra_buttons.utils import check_decorator_errors
 
 
 def test_permissions(db):
-    assert check_decorator_errors(Admin1) == []
+    from django.contrib.admin import site
+    m = site._registry[DemoModel1]
+    assert check_decorator_errors(m) == []
 
 
 def test_mixin_checks(db):
