@@ -37,7 +37,7 @@ class Class2:
 
 
 @pytest.mark.django_db
-@pytest.mark.parametrize("cls, expected", ((Class1, 1), (Class2, 0)))
+@pytest.mark.parametrize("cls, expected", ((Class1(), 1), (Class2(), 0)))
 def test_check_decorator_errors(cls, expected):
     errors = check_decorator_errors(cls)
     assert len(errors) == expected, errors
