@@ -1,3 +1,8 @@
+(dev)
+-----
+* BUG FIX: fixes check() implementation
+
+
 1.5.7
 -----
 * Allow any HttpResponse as return value
